XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -253,8 +253,10 @@
                   style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 7px;">
                   Enhancements Overview</h2>
                 <div class="banner-eicw">
-                  <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img" style="box-shadow: none; border: none;">
-                    <img src="img/ccl6-overview-light.png" id="evo3-img" class="img-fluid" alt="evo3" style="box-shadow: none; border: none;">
+                  <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img"
+                    style="box-shadow: none; border: none;">
+                    <img src="img/ccl6-overview-light.png" id="evo3-img" class="img-fluid" alt="evo3"
+                      style="box-shadow: none; border: none;">
                   </a>
                 </div>
               </div>
@@ -323,8 +325,10 @@
             <div class="row wow fadeIn" data-wow-delay="100ms">
               <div class="column column-pic">
                 <figcaption>
-                  <a href="img/arrow-light.png" id="arrow" class="portfolio-img ">
-                    <img src="img/arrow-light.png" id="arrow-img" class="img-fluid arrow-img" alt="arrow">
+                  <a href="img/arrow-light.png" id="arrow" class="portfolio-img"
+                    style="box-shadow: none; border: none;">
+                    <img src="img/arrow-light.png" id="arrow-img" class="img-fluid arrow-img" alt="arrow"
+                      style="box-shadow: none; border: none;">
                   </a>
                 </figcaption>
               </div>
@@ -337,12 +341,11 @@
 
   <!----- Section 1 Header ----->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ent-img"
-    style="background-image: url(img/ent-light.png)">
+    style="background-image: url(img/ent-light.png); height: 45vh;">
     <div class="container h-100" id="ent">
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Section 1 : Entrance Level</h2>
           </div>
         </div>
       </div>
@@ -357,6 +360,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
+                  <h2 style="font-size: 30px; font-weight:bold;">Section 1 : Entrance Level</h2>
                   <h5>The proposed design follows the same design principles as Thomson East
                     Coast Line (TEL) and other newer lines, mainly:</h5>
                   <p>
@@ -384,16 +388,16 @@
               <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-6.png" id="dpp" class="portfolio-img ">
-                      <img src="img/ccl6-6.png" id="dpp-img" class="img-fluid dpp-img" alt="dpp">
+                    <a href="img/ccl6-6.png" id="dpp" class="portfolio-img" style="border-radius: 10px;">
+                      <img src="img/ccl6-6.png" id="dpp-img" class="img-fluid cp-img" alt="dpp" style="border-radius: 10px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
                 </div>
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-6a.png" id="dpm" class="portfolio-img ">
-                      <img src="img/ccl6-6a.png" id="dpm-img" class="img-fluid dpm-img" alt="dpm">
+                    <a href="img/ccl6-6a.png" id="dpm" class="portfolio-img" style="border-radius: 10px;">
+                      <img src="img/ccl6-6a.png" id="dpm-img" class="img-fluid cp-img" alt="dpm" style="border-radius: 10px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -408,12 +412,11 @@
 
   <!----- Section 2 Header ----->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="conc-img"
-    style="background-image: url(img/conc-light.png)">
+    style="background-image: url(img/conc-light.png); height: 45vh;">
     <div class="container h-100" id="conc">
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Section 2 : Concourse</h2>
           </div>
         </div>
       </div>
@@ -428,6 +431,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
+                  <h2 style="font-size: 30px; font-weight:bold;">Section 2 : Concourse</h2>
                   <h5>The proposed design follows the same design principles as Thomson East
                     Coast Line (TEL) and other newer lines, mainly:</h5>
                   <p>
@@ -458,7 +462,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-7.png" id="wfp" class="portfolio-img ">
-                      <img src="img/ccl6-7.png" id="wfp-img" class="img-fluid wfp-img" alt="wfp">
+                      <img src="img/ccl6-7.png" id="wfp-img" class="img-fluid cp-img" alt="wfp">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -466,7 +470,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-7aL.png" id="wfm" class="portfolio-img ">
-                      <img src="img/ccl6-7aL.png" id="wfm-img" class="img-fluid wfm-img" alt="wfm">
+                      <img src="img/ccl6-7aL.png" id="wfm-img" class="img-fluid cp-img" alt="wfm">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -486,7 +490,6 @@
       <div class="row h-100 align-items-center">
         <div class="col-12">
           <div class="breadcrumb-content text-center">
-            <h2 class="page-title">Section 3 : Platform</h2>
           </div>
         </div>
       </div>
@@ -501,6 +504,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
+                  <h2 style="font-size: 30px; font-weight:bold;">Section 3 : Platform</h2>
                   <h5>The proposed design follows the same design principles as Thomson East
                     Coast Line (TEL) and other newer lines, mainly:</h5>
                   <p>
@@ -599,7 +603,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-8.png" id="wfpp" class="portfolio-img ">
-                      <img src="img/ccl6-8.png" id="wfpp-img" class="img-fluid wfpp-img" alt="wfpp">
+                      <img src="img/ccl6-8.png" id="wfpp-img" class="img-fluid cp-img" alt="wfpp">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -607,7 +611,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-8a.png" id="wfplm" class="portfolio-img ">
-                      <img src="img/ccl6-8a.png" id="wfplm-img" class="img-fluid wfplm-img" alt="wfplm">
+                      <img src="img/ccl6-8a.png" id="wfplm-img" class="img-fluid cp-img" alt="wfplm">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -667,16 +671,16 @@
               <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-9.png" id="pdp" class="portfolio-img ">
-                      <img src="img/ccl6-9.png" id="pdp-img" class="img-fluid pdp-img" alt="pdp">
+                    <a href="img/ccl6-9.png" id="pdp" class="portfolio-img " style="border-radius: 0px;">
+                      <img src="img/ccl6-9.png" id="pdp-img" class="img-fluid cp-img" alt="pdp" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
                 </div>
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-9a.png" id="pdm" class="portfolio-img ">
-                      <img src="img/ccl6-9a.png" id="pdm-img" class="img-fluid pdm-img" alt="pdm">
+                    <a href="img/ccl6-9a.png" id="pdm" class="portfolio-img " style="border-radius: 0px;">
+                      <img src="img/ccl6-9a.png" id="pdm-img" class="img-fluid cp-img" alt="pdm" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -729,16 +733,16 @@
               <div class="row wow fadeIn" data-wow-delay="100ms">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-10.png" id="tfp" class="portfolio-img ">
-                      <img src="img/ccl6-10.png" id="tfp-img" class="img-fluid tfp-img" alt="tfp">
+                    <a href="img/ccl6-10.png" id="tfp" class="portfolio-img" style="border-radius: 0px;">
+                      <img src="img/ccl6-10.png" id="tfp-img" class="img-fluid cp-img" alt="tfp" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
                 </div>
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/ccl6-10a.png" id="tfm" class="portfolio-img ">
-                      <img src="img/ccl6-10a.png" id="tfm-img" class="img-fluid tfm-img" alt="tfm">
+                    <a href="img/ccl6-10a.png" id="tfm" class="portfolio-img" style="border-radius: 0px;">
+                      <img src="img/ccl6-10a.png" id="tfm-img" class="img-fluid cp-img" alt="tfm" style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -800,7 +804,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-11.png" id="tfp" class="portfolio-img ">
-                      <img src="img/ccl6-11.png" id="tfp-img" class="img-fluid tfp-img" alt="tfp">
+                      <img src="img/ccl6-11.png" id="tfp-img" class="img-fluid cp-img" alt="tfp">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -808,7 +812,7 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-11a.png" id="tfm" class="portfolio-img ">
-                      <img src="img/ccl6-11a.png" id="tfm-img" class="img-fluid tfm-img" alt="tfm">
+                      <img src="img/ccl6-11a.png" id="tfm-img" class="img-fluid cp-img" alt="tfm">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
