XXXX-XX Feature Update for Version Next (6.0.0)

--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <title>NRFZ | Blog</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-    <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
+    <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
@@ -271,7 +271,7 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30" data-date="2024-10-12">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/lsSie7o.png" alt>
+                        <img src="https://i.imgur.com/FA2hB9i.png" alt>
                         <div class="hover-content-blog">
                             <h4>If you can't beat them, join them</h4>
                             <a class="read" href="blog/wayfind-2.html" class="portfolio-img"><i
@@ -353,8 +353,6 @@
     <script src="js/blogFunct.js"></script>
 
     <script src="js/dstabs.js"></script>
-
-    <!-- <script src="js/preloader.js"></script> -->
 
 </body>
 
