--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -11,7 +11,7 @@
   <title>EZ-Link Card Redesign | WBN</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
+  <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
