XXXX-XX Feature Update for Version Next (6.0.0)

--- a/blog.html
+++ b/blog.html
@@ -282,7 +282,7 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2024-09-01">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/f84Pcxo.png" alt>
+                        <img src="https://i.imgur.com/0CCS3Ks.png" alt>
                         <div class="hover-content-blog">
                             <h4>Personal V4 - A big redesign</h4>
                             <a class="read" href="blog/personal-v4-1.html" class="portfolio-img"><i
@@ -293,7 +293,7 @@
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30" data-date="2024-06-30">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/JFAxwwd.png" alt>
+                        <img src="https://i.imgur.com/smZXorB.png" alt>
                         <div class="hover-content-blog">
                             <h4>New Wayfinding System - How has it been so far?</h4>
                             <a class="read" href="blog/wayfind.html" class="portfolio-img"><i
