XXXX-XX Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/igra2.html
+++ b/worksbynrfz/igra2.html
@@ -206,7 +206,7 @@
           <ul>
             <li>
               <a href="https://i.imgur.com/lkWD0vn.png"><i
-                  class="fa-solid fa-up-right-and-down-left-from-center"></i>&nbsp; View Full Size</a>
+                  class="fa-solid fa-up-right-and-down-left-from-center"></i>&nbsp; View Actual Size</a>
             </li>
           </ul>
 
