XXXX-XX Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/ezlink-red.html
+++ b/worksbynrfz/ezlink-red.html
@@ -227,6 +227,7 @@
 
   <br>
 
+  <!-- Details Section -->
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_section wow fadeIn" data-wow-delay="100ms">
       <div class="container">
@@ -285,8 +286,8 @@
                 <div class="info justify-content-center">
                   <p style="text-align: center;">An attempt to redesign the EZ-Link Concession
                     Cards,
-                    based on the current design language of the <a
-                      href="https://www.samuel-lim.com/signage-system" class="hyperlink">wayfinding
+                    based on the current design language of the <a href="https://www.samuel-lim.com/signage-system"
+                      class="hyperlink">wayfinding
                       system</p>
                 </div>
               </div>
@@ -297,6 +298,7 @@
     </div>
   </section>
 
+  <!-- Contents -->
   <div class="wrapper">
     <div class="carousel-gradient carousel-gradient-left"></div>
     <div class="carousel-gradient carousel-gradient-right"></div>
@@ -333,8 +335,6 @@
       </div>
     </div>
   </div>
-
-
 
   <!-- Footer -->
   <footer class="footer">
