--- a/worksbynrfz/igra1.html
+++ b/worksbynrfz/igra1.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/b29Wusf.png');
+    background-image: url('https://i.imgur.com/eUK5ouF.png');
     height: 75vh;
   }
 </style>
@@ -227,6 +227,7 @@
 
   <br>
 
+  <!-- Details/Contents Section -->
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_section wow fadeIn" data-wow-delay="100ms">
       <div class="container">
@@ -290,7 +291,7 @@
               </div>
             </div>
 
-            <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+            <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
               <a href="https://i.imgur.com/IZtl7ID.png" class="portfolio-img"><img src="https://i.imgur.com/IZtl7ID.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
@@ -300,8 +301,6 @@
       </div>
     </div>
   </section>
-
-
 
   <!-- Footer -->
   <footer class="footer">
@@ -443,11 +442,11 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/b29Wusf.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/eUK5ouF.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/b29Wusf.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/eUK5ouF.png')";
       }
     }
   </script>
