--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -230,6 +230,7 @@
 
   <br>
 
+  <!-- Details Section -->
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_section wow fadeIn" data-wow-delay="100ms">
       <div class="container">
@@ -300,6 +301,7 @@
     </div>
   </section>
 
+  <!-- Contents Section -->
   <div class="wrapper">
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
