--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/YrHRPO7.png');
+    background-image: url('https://i.imgur.com/hXgVN2l.png');
     height: 80vh;
   }
 </style>
@@ -227,6 +227,7 @@
 
   <br>
 
+  <!-- Details Section -->
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_section wow fadeIn" data-wow-delay="100ms">
       <div class="container">
@@ -296,6 +297,7 @@
     </div>
   </section>
 
+  <!-- Contents -->
   <div class="wrapper">
     <div class="carousel-gradient carousel-gradient-left"></div>
     <div class="carousel-gradient carousel-gradient-right"></div>
@@ -322,8 +324,6 @@
       </div>
     </div>
   </div>
-
-
 
   <!-- Footer -->
   <footer class="footer">
@@ -465,11 +465,11 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/YrHRPO7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/hXgVN2l.png')";
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/YrHRPO7.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/hXgVN2l.png')";
       }
     }
   </script>
