--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -38,7 +38,7 @@
 
 <style>
   #cv-tdc {
-    background-image: url('https://i.imgur.com/jWUcOWy.png');
+    background-image: url('https://i.imgur.com/HTSYQUa.png');
     height: 75vh;
   }
 </style>
@@ -228,6 +228,7 @@
 
   <br>
 
+  <!-- Details Section -->
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_section wow fadeIn" data-wow-delay="100ms">
       <div class="container">
@@ -301,6 +302,7 @@
     </div>
   </section>
 
+  <!-- Contents -->
   <div class="wrapper">
     <div class="carousel-gradient carousel-gradient-left"></div>
     <div class="carousel-gradient carousel-gradient-right"></div>
@@ -469,7 +471,7 @@
 
       if (isDarkMode) {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/jWUcOWy.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/HTSYQUa.png')";
 
         tdt1_link.href = 'https://i.imgur.com/FpOufoV.png';
         tdt1_img.src = 'https://i.imgur.com/FpOufoV.png';
@@ -483,7 +485,7 @@
 
       } else {
         /* Banners */
-        tdcPage.style.backgroundImage = "url('https://i.imgur.com/jWUcOWy.png')";
+        tdcPage.style.backgroundImage = "url('https://i.imgur.com/HTSYQUa.png')";
 
         tdt1_link.href = 'https://i.imgur.com/XPq0mvF.png';
         tdt1_img.src = 'https://i.imgur.com/XPq0mvF.png';
