2026-01 Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/igra2.html
+++ b/worksbynrfz/igra2.html
@@ -330,6 +330,8 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
+  <script src="../js/navtabs.js"></script>
+
   <script src="../js/jquery.min.js"></script>
 
   <script src="../js/popper.min.js"></script>
@@ -342,17 +344,11 @@
 
   <script src="../js/swiper-bundle.min.js"></script>
 
-  <script src="../js/portfolio-img.min.js"></script>
-
   <script src="../js/isotope.pkgd.min.js"></script>
-
-  <script src="../js/portfolio-comp.js"></script>
 
   <script src="../js/copy-to-clipboard.js"></script>
 
   <script src='//cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js'></script>
-
-  <script src="../js/portfolio-img.min.js"></script>
 
   <script src="../js/dis.js"></script>
 
