--- a/worksbynrfz/bp12.html
+++ b/worksbynrfz/bp12.html
@@ -285,7 +285,8 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;">A concept proposal I made to showcase my replication works
+                  <p style="text-align: center; padding-bottom: 2em;">A concept proposal I made to showcase my
+                    replication works
                     capability. Design is updated in July 2024, to align with current design standards.</p>
                 </div>
               </div>
@@ -328,6 +329,8 @@
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
+
+  <script src="../js/navtabs.js"></script>
 
   <script src="../js/jquery.min.js"></script>
 
