--- a/worksbynrfz/igra1.html
+++ b/worksbynrfz/igra1.html
@@ -285,8 +285,8 @@
               <div class="col-lg-12">
                 <div class="info justify-content-center">
                   <p style="text-align: center; padding-bottom: 2em;"> A submission for an assignment to turn my Resume
-                      into an
-                      Infographic Version.</p>
+                    into an
+                    Infographic Version.</p>
                 </div>
               </div>
             </div>
@@ -331,6 +331,8 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
+  <script src="../js/navtabs.js"></script>
+
   <script src="../js/jquery.min.js"></script>
 
   <script src="../js/popper.min.js"></script>
@@ -343,17 +345,11 @@
 
   <script src="../js/swiper-bundle.min.js"></script>
 
-  <script src="../js/portfolio-img.min.js"></script>
-
   <script src="../js/isotope.pkgd.min.js"></script>
-
-  <script src="../js/portfolio-comp.js"></script>
 
   <script src="../js/copy-to-clipboard.js"></script>
 
   <script src='//cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js'></script>
-
-  <script src="../js/portfolio-img.min.js"></script>
 
   <script src="../js/dis.js"></script>
 
