2026-01 Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/lta-pids.html
+++ b/worksbynrfz/lta-pids.html
@@ -318,18 +318,18 @@
     <div class="carousel-gradient carousel-gradient-right"></div>
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/0CvilmH.png" class="portfolio-img" data-gallery="carousel" id="pids1">
-          <img class="img-fluid" src="https://i.imgur.com/0CvilmH.png" alt="pids1-img" draggable="false" id="pids1-img">
+        <a href="https://i.imgur.com/XiG7syJ.png" class="portfolio-img" data-gallery="carousel" id="pids1">
+          <img class="img-fluid" src="https://i.imgur.com/XiG7syJ.png" alt="pids1-img" draggable="false" id="pids1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/5EwPebe.png" class="portfolio-img" data-gallery="carousel" id="pids2">
-          <img class="img-fluid" src="https://i.imgur.com/5EwPebe.png" alt="pids2-img" draggable="false" id="pids2-img">
+        <a href="https://i.imgur.com/7UMYr3S.png" class="portfolio-img" data-gallery="carousel" id="pids2">
+          <img class="img-fluid" src="https://i.imgur.com/7UMYr3S.png" alt="pids2-img" draggable="false" id="pids2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/CDq64eu.png" class="portfolio-img" data-gallery="carousel" id="pids3">
-          <img class="img-fluid" src="https://i.imgur.com/CDq64eu.png" alt="pids3-img" draggable="false" id="pids3-img">
+        <a href="https://i.imgur.com/4sneWU4.png" class="portfolio-img" data-gallery="carousel" id="pids3">
+          <img class="img-fluid" src="https://i.imgur.com/4sneWU4.png" alt="pids3-img" draggable="false" id="pids3-img">
         </a>
       </div>
       <div class="carousel-cell">
