--- a/worksbynrfz/sit.html
+++ b/worksbynrfz/sit.html
@@ -303,23 +303,23 @@
     <div class="carousel-gradient carousel-gradient-right"></div>
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/YgEWKR0.png" class="portfolio-img" data-gallery="carousel" id="sit1">
-          <img class="img-fluid" src="https://i.imgur.com/YgEWKR0.png" alt="sit1-img" draggable="false" id="sit1-img">
+        <a href="https://i.imgur.com/fz1b5Wu.png" class="portfolio-img" data-gallery="carousel" id="sit1">
+          <img class="img-fluid" src="https://i.imgur.com/fz1b5Wu.png" alt="sit1-img" draggable="false" id="sit1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/y9XAe9A.png" class="portfolio-img" data-gallery="carousel" id="sit2">
-          <img class="img-fluid" src="https://i.imgur.com/y9XAe9A.png" alt="sit2-img" draggable="false" id="sit2-img">
+        <a href="https://i.imgur.com/JF01ey9.png" class="portfolio-img" data-gallery="carousel" id="sit2">
+          <img class="img-fluid" src="https://i.imgur.com/JF01ey9.png" alt="sit2-img" draggable="false" id="sit2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/gYOpvWO.png" class="portfolio-img" data-gallery="carousel" id="sit3">
-          <img class="img-fluid" src="https://i.imgur.com/gYOpvWO.png" alt="sit3-img" draggable="false" id="sit3-img">
+        <a href="https://i.imgur.com/gNawehn.png" class="portfolio-img" data-gallery="carousel" id="sit3">
+          <img class="img-fluid" src="https://i.imgur.com/gNawehn.png" alt="sit3-img" draggable="false" id="sit3-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/sKUoN2g.png" class="portfolio-img" data-gallery="carousel" id="sit4">
-          <img class="img-fluid" src="https://i.imgur.com/sKUoN2g.png" alt="sit4-img" draggable="false" id="sit4-img">
+        <a href="https://i.imgur.com/w3kOpM3.png" class="portfolio-img" data-gallery="carousel" id="sit4">
+          <img class="img-fluid" src="https://i.imgur.com/w3kOpM3.png" alt="sit4-img" draggable="false" id="sit4-img">
         </a>
       </div>
     </div>
