2026-01 Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -302,22 +302,20 @@
 
   <!-- Contents -->
   <div class="wrapper">
-    <div class="carousel-gradient carousel-gradient-left"></div>
-    <div class="carousel-gradient carousel-gradient-right"></div>
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/2cNsXHg.png" class="portfolio-img" data-gallery="carousel" id="bsp1">
-          <img class="img-fluid" src="https://i.imgur.com/2cNsXHg.png" alt="bsp1-img" draggable="false" id="bsp1-img">
+        <a href="https://i.imgur.com/bSU8bxu.png" class="portfolio-img" data-gallery="carousel" id="bsp1">
+          <img class="img-fluid" src="https://i.imgur.com/bSU8bxu.png" alt="bsp1-img" draggable="false" id="bsp1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/hywuPSV.png" class="portfolio-img" data-gallery="carousel" id="bsp2">
-          <img class="img-fluid" src="https://i.imgur.com/hywuPSV.png" alt="bsp2-img" draggable="false" id="bsp2-img">
+        <a href="https://i.imgur.com/INw8fUm.png" class="portfolio-img" data-gallery="carousel" id="bsp2">
+          <img class="img-fluid" src="https://i.imgur.com/INw8fUm.png" alt="bsp2-img" draggable="false" id="bsp2-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/XZGFXVi.png" class="portfolio-img" data-gallery="carousel" id="bsp3">
-          <img class="img-fluid" src="https://i.imgur.com/XZGFXVi.png" alt="bsp3-img" draggable="false" id="bsp3-img">
+        <a href="https://i.imgur.com/gjkgAaO.png" class="portfolio-img" data-gallery="carousel" id="bsp3">
+          <img class="img-fluid" src="https://i.imgur.com/gjkgAaO.png" alt="bsp3-img" draggable="false" id="bsp3-img">
         </a>
       </div>
     </div>
