--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -188,11 +188,16 @@
               </ol>
             </nav>
             <div class="page-title-wrapper">
-              <h1 class="page-title-single">Rethinking CCL6 Signages</h1>
+              <h1 class="page-title-single">Rethinking <span style="cursor: pointer;" onclick="playAudio()" title="Click me to hear one of the CCL Chimes!">CCL6</span> Signages</h1>
               <p class="page-subtitle">9 mins read</p>
             </div>
           </div>
         </div>
+
+        <audio id="chimes">
+          <source src="../img/chimes/CCL_Chime B_V2.wav" type="audio/wav">
+          Your browser does not support the audio element.
+        </audio>
 
         <div class="scrollable-tabs-container">
           <div class="left-arrow">
@@ -389,7 +394,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-6.png" id="dpp" class="portfolio-img" style="border-radius: 10px;">
-                      <img src="img/ccl6-6.png" id="dpp-img" class="img-fluid cp-img" alt="dpp" style="border-radius: 10px;">
+                      <img src="img/ccl6-6.png" id="dpp-img" class="img-fluid cp-img" alt="dpp"
+                        style="border-radius: 10px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -397,7 +403,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-6a.png" id="dpm" class="portfolio-img" style="border-radius: 10px;">
-                      <img src="img/ccl6-6a.png" id="dpm-img" class="img-fluid cp-img" alt="dpm" style="border-radius: 10px;">
+                      <img src="img/ccl6-6a.png" id="dpm-img" class="img-fluid cp-img" alt="dpm"
+                        style="border-radius: 10px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -672,7 +679,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-9.png" id="pdp" class="portfolio-img " style="border-radius: 0px;">
-                      <img src="img/ccl6-9.png" id="pdp-img" class="img-fluid cp-img" alt="pdp" style="border-radius: 0px;">
+                      <img src="img/ccl6-9.png" id="pdp-img" class="img-fluid cp-img" alt="pdp"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -680,7 +688,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-9a.png" id="pdm" class="portfolio-img " style="border-radius: 0px;">
-                      <img src="img/ccl6-9a.png" id="pdm-img" class="img-fluid cp-img" alt="pdm" style="border-radius: 0px;">
+                      <img src="img/ccl6-9a.png" id="pdm-img" class="img-fluid cp-img" alt="pdm"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -734,7 +743,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-10.png" id="tfp" class="portfolio-img" style="border-radius: 0px;">
-                      <img src="img/ccl6-10.png" id="tfp-img" class="img-fluid cp-img" alt="tfp" style="border-radius: 0px;">
+                      <img src="img/ccl6-10.png" id="tfp-img" class="img-fluid cp-img" alt="tfp"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -742,7 +752,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-10a.png" id="tfm" class="portfolio-img" style="border-radius: 0px;">
-                      <img src="img/ccl6-10a.png" id="tfm-img" class="img-fluid cp-img" alt="tfm" style="border-radius: 0px;">
+                      <img src="img/ccl6-10a.png" id="tfm-img" class="img-fluid cp-img" alt="tfm"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
