2026-01 Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/lta-bp.html
+++ b/worksbynrfz/lta-bp.html
@@ -289,7 +289,7 @@
                     iconographies and
                     colours are due for a refresh - in line with the new <a
                       href="https://www.samuel-lim.com/signage-system" class="hyperlink">wayfinding
-                      system</a> introduced in 2019.</p>
+                      system</a> introduced in 2019.
                   </p>
                 </div>
               </div>
