2026-01 Feature Update for Version Next (6.0.0)

--- a/about.html
+++ b/about.html
@@ -307,7 +307,7 @@
                 <!-- Education -->
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; font-size: 36px;"><u>Education</u></h2>
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 25px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
@@ -341,7 +341,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeIn" data-wow-delay="300ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Awards
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 25px;"><u>Awards
                                 & Achievements</u></h2>
                     </div>
                 </div>
@@ -399,7 +399,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeIn" data-wow-delay="50ms">
-                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;">
+                        <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 25px;">
                             <u>Experiences</u></h2>
                     </div>
                 </div>
@@ -465,7 +465,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
-                        <h2 style="font-size: 30px">Language Proficiency</h2>
+                        <h2 style="font-size: 25px">Language Proficiency</h2>
                     </div>
                 </div>
             </div>
@@ -500,7 +500,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading text-center wow fadeIn" data-wow-delay="500ms">
-                        <h2 style="font-size: 30px">Programming Languages</h2>
+                        <h2 style="font-size: 25px">Programming Languages</h2>
                     </div>
                 </div>
             </div>
