2026-01 Feature Update for Version Next (6.0.0)

--- a/worksbynrfz/man-a22-masc.html
+++ b/worksbynrfz/man-a22-masc.html
@@ -284,7 +284,7 @@
               </div>
             </div>
             <div class="banner text-center wow fadeIn" data-wow-delay="150ms">
-              <a href="https://i.imgur.com/oaoe70g.png" class="portfolio-img"><img src="https://i.imgur.com/oaoe70g.png"
+              <a href="https://i.imgur.com/s1Ir8of.png" class="portfolio-img"><img src="https://i.imgur.com/s1Ir8of.png"
                   class="img-fluid" alt="cover-page"></a>
             </div>
           </div>
