--- a/blog.html
+++ b/blog.html
@@ -247,6 +247,17 @@
                 </div>
             </div>
             <div class="row pw-portfolio">
+                <!-- <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2025-06-01">
+                    <div class="single-portfolio-content">
+                        <img src="https://i.imgur.com/sycXHkv.png" alt>
+                        <div class="hover-content-blog">
+                            <h4>Personal Version 6.0 - A Significant Refresh</h4>
+                            <a class="read" href="blog/personal-v6-0.html" class="portfolio-img"><i
+                                    class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div> -->
+
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30" data-date="2025-06-01">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/sycXHkv.png" alt>
