--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -248,7 +248,7 @@
             <div class="row justify-content-center">
 
               <!-- Preface -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <p style="text-align: left; padding-top: 2em;">This section is catered for the Buses side of things - signages and what
                     not. A lot of focus has been given to the Train's side of things, so why not show the same love for
@@ -258,7 +258,7 @@
                     on the changes I proposed on <a href="eicw-2.html" class="hyperlink">the second page</a>.</p>
                 </div>
               </div>
-              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
+              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms">
                 <a href="#psrith">
                   <button class="btn">Pasir Ris ITH</button>
                 </a>
@@ -268,9 +268,6 @@
                 <a href="#br-diag">
                   <button class="btn">Bus Route Diagrams</button>
                 </a>
-                <!-- <a href="#postface">
-                  <button class="btn">Postface</button>
-                </a> -->
               </div>
             </div>
           </div>
@@ -409,7 +406,7 @@
         </div>
 
         <p>Hence I've decided to redesign and make the design more consistent. As mentioned in the <a
-            href="eicw-2.html">second page</a>, I have decided to only stick with just the Dark Grey colour across all
+            href="eicw-2.html" class="hyperlink">second page</a>, I have decided to only stick with just the Dark Grey colour across all
           signages.</p>
 
         <div class="banner-eicw">
