--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -248,7 +248,7 @@
             <div class="row justify-content-center">
 
               <!-- Preface -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">Proposed UI/UX
                     Changes</h2>
@@ -260,7 +260,7 @@
                   </p>
                 </div>
               </div>
-              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms" style="padding-bottom: 2em;">
+              <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms" style="padding-bottom: 2em;">
                 <a href="#bcr">
                   <button class="btn">Bus Card Reader UI (LTA)</button>
                 </a>
