--- a/worksbynrfz/food-rev-flash-app.html
+++ b/worksbynrfz/food-rev-flash-app.html
@@ -297,13 +297,13 @@
   <div class="wrapper">
     <div class="carousel" id="delays-carousel">
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/Gv53pjy.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
-          <img class="img-fluid" src="https://i.imgur.com/Gv53pjy.png" alt="tdt1-img" draggable="false" id="tdt1-img">
+        <a href="https://i.imgur.com/9ieLSnx.png" class="portfolio-img" data-gallery="carousel" id="tdt1">
+          <img class="img-fluid" src="https://i.imgur.com/9ieLSnx.png" alt="tdt1-img" draggable="false" id="tdt1-img">
         </a>
       </div>
       <div class="carousel-cell">
-        <a href="https://i.imgur.com/qm1ttTo.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
-          <img class="img-fluid" src="https://i.imgur.com/qm1ttTo.png" alt="tdt2-img" draggable="false" id="tdt2-img">
+        <a href="https://i.imgur.com/KcijXhN.png" class="portfolio-img" data-gallery="carousel" id="tdt2">
+          <img class="img-fluid" src="https://i.imgur.com/KcijXhN.png" alt="tdt2-img" draggable="false" id="tdt2-img">
         </a>
       </div>
     </div>
@@ -451,37 +451,26 @@
       const tdt2_link = document.getElementById('tdt2');
       const tdt2_img = document.getElementById('tdt2-img');
 
-      const tdt3_link = document.getElementById('tdt3');
-      const tdt3_img = document.getElementById('tdt3-img');
-
-
       if (isDarkMode) {
         /* Banners */
         tdcPage.style.backgroundImage = "url('https://i.imgur.com/b0dgplx.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/FpOufoV.png';
-        tdt1_img.src = 'https://i.imgur.com/FpOufoV.png';
+        tdt1_link.href = 'https://i.imgur.com/9ieLSnx.png';
+        tdt1_img.src = 'https://i.imgur.com/9ieLSnx.png';
 
-        tdt2_link.href = 'https://i.imgur.com/UwMCmXE.png';
-        tdt2_img.src = 'https://i.imgur.com/UwMCmXE.png';
-
-        tdt3_link.href = 'https://i.imgur.com/eX0NhWw.png';
-        tdt3_img.src = 'https://i.imgur.com/eX0NhWw.png';
+        tdt2_link.href = 'https://i.imgur.com/KcijXhN.png';
+        tdt2_img.src = 'https://i.imgur.com/KcijXhN.png';
 
 
       } else {
         /* Banners */
         tdcPage.style.backgroundImage = "url('https://i.imgur.com/b0dgplx.png')";
 
-        tdt1_link.href = 'https://i.imgur.com/XPq0mvF.png';
-        tdt1_img.src = 'https://i.imgur.com/XPq0mvF.png';
+        tdt1_link.href = 'https://i.imgur.com/9ieLSnx.png';
+        tdt1_img.src = 'https://i.imgur.com/9ieLSnx.png';
 
-        tdt2_link.href = 'https://i.imgur.com/JqT4T3I.png';
-        tdt2_img.src = 'https://i.imgur.com/JqT4T3I.png';
-
-        tdt3_link.href = 'https://i.imgur.com/xKLVJbC.png';
-        tdt3_img.src = 'https://i.imgur.com/xKLVJbC.png';
-
+        tdt2_link.href = 'https://i.imgur.com/KcijXhN.png';
+        tdt2_img.src = 'https://i.imgur.com/KcijXhN.png';
       }
     }
   </script>
