--- a/our-networks.html
+++ b/our-networks.html
@@ -30,30 +30,30 @@
     <nav class="navbar-container">
         <div class="navbar">
             <!-- Logo -->
-            <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
+            <a href="index.html"><img src="img/core-img/logo.png" alt="logo" class="logo" /></a>
 
             <!-- Navigation Links -->
             <ul class="navbar-nav" id="navbarNav">
                 <li class="nav-item">
-                    <a href="../index.html" class="nav-link">
+                    <a href="index.html" class="nav-link">
                         <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../statistics/statistics.html" class="nav-link">
+                    <a href="statistics/statistics.html" class="nav-link">
                         <i class="fa-solid fa-chart-line"></i>
                         <span>Statistics</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../incident-history/incident-history.html" class="nav-link">
+                    <a href="incident-history/incident-history.html" class="nav-link">
                         <i class="fa-solid fa-clock-rotate-left"></i>
                         <span>Incident History</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="../our-networks.html" class="nav-link active">
+                    <a href="our-networks.html" class="nav-link active">
                         <i class="fa-solid fa-map"></i>
                         <span>Networks</span>
                     </a>
@@ -383,7 +383,7 @@
 
     <script src='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.js'></script>
 
-    <script src="../js/dstabs.js"></script>
+    <script src="js/dstabs.js"></script>
 
     <script src="js/popper.min.js"></script>
 
