--- a/our-networks.html
+++ b/our-networks.html
@@ -395,7 +395,7 @@
 
     <script src="js/theme.js"></script>
 
-    <script src="js/preloader.js"></script>
+    <script src="js/swiper-ri.js"></script>
 
 </body>
 
