--- a/our-networks.html
+++ b/our-networks.html
@@ -379,11 +379,9 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
+    <script src="js/navtabs.js"></script>
+
     <script src="js/jquery.min.js"></script>
-
-    <script src='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.js'></script>
-
-    <script src="js/dstabs.js"></script>
 
     <script src="js/popper.min.js"></script>
 
@@ -392,6 +390,8 @@
     <script src="js/pw.bundle.js"></script>
 
     <script src="js/default-assets/active.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script src="js/theme.js"></script>
 
