2026-01 Feature Update for Version Next (6.0.0)

--- a/incident-history/incident-history.html
+++ b/incident-history/incident-history.html
@@ -381,14 +381,14 @@
                     <ul id="ihTab" role="tablist">
                         <!-- <li role="history">
                             <a id="tab1-tab" data-target="#tab1" aria-selected="false" >December</a>
-                        </li>
-
-                        <li role="history">
-                            <a id="tab2-tab" data-target="#tab2" aria-selected="false">November</a>
                         </li> -->
 
                         <li role="history">
-                            <a id="tab3-tab" data-target="#tab3" aria-selected="false" class="active">October</a>
+                            <a id="tab2-tab" data-target="#tab2" aria-selected="false" class="active">November</a>
+                        </li>
+
+                        <li role="history">
+                            <a id="tab3-tab" data-target="#tab3" aria-selected="false">October</a>
                         </li>
 
                         <li role="history">
@@ -438,8 +438,35 @@
             </div>
 
             <div class="tab-content" id="ihTabContent">
+                <!-- November -->
+                <div class="tab-pane fade show active" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+                    <p class="card-text-ri" style="font-size: 15px; font-weight: bolder;">
+                        No Reported Delays
+                    </p>
+                    <!-- <div class="card-in" id="2025-10-20" style="scroll-margin-top: 10vh;">
+                        <div class="card-header">
+                            <i class="fa-solid fa-clock-rotate-left" style="font-size: 20px;"></i>&nbsp; 20/10/2025
+                        </div>
+                        <div class="card-body text-primary" style="position: relative;">
+                            <img src="../img/caplets/NSLCap.png" alt="NSL" width="55px" style="padding-bottom: 1em;">
+                            <a href="https://x.com/SMRT_Singapore/status/1976236326144863489"
+                                style="position: absolute; top: -34px; right: 16px;">
+                                <i class="fa-brands fa-square-x-twitter" style="font-size: 25px;"
+                                    title="via X (Twitter)"></i>
+                            </a>
+
+                            <p class="card-text-ri" style="font-size: 15px;">
+                                UPDATE: Train services have resumed. Please add 20mins travel time from #Yishun to
+                                #MarinaSouthPier towards #JurongEast. Free regular bus svc is available between
+                                #Yishun and #Woodlands.
+                            </p>
+
+                        </div>
+                    </div> -->
+                </div>
+
                 <!-- October -->
-                <div class="tab-pane fade show active" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
+                <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
                     <p class="card-text-ri" style="font-size: 15px; font-weight: bolder;">
                         No Reported Delays
                     </p>
