--- a/mrt-lines/ccl.html
+++ b/mrt-lines/ccl.html
@@ -283,7 +283,7 @@
               <div class="details_info">
                 <div class="row justify-content-center">
                   <div class="col-lg-12">
-                    <div class="info justify-content-center wow fadeInUp" data-wow-delay="300ms">
+                    <div class="info justify-content-center wow fadeIn" data-wow-delay="300ms">
                       <p style="text-align: center;">Building the Circle Line (CCL) was a
                         feat that required innovations in design, engineering and construction. It took place in
                         challenging soil
@@ -312,7 +312,7 @@
                 </div>
               </div>
 
-              <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="500ms" id="ld">
+              <div class="about-me-stations text-center mb-80 wow fadeIn" data-wow-delay="500ms" id="ld">
 
                 <h3 class="ld-s-title">Line Diagram</h3>
                 <div class="row row-line-diag justify-content-center">
@@ -324,7 +324,7 @@
 
 
               <div class="col-md-12 col-12 box-indiv" id="stn">
-                <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                <div class="about-me-stations text-center mb-80 wow fadeIn" data-wow-delay="700ms">
 
                   <h3 class="ld-s-title">Stations</h3>
                   <div class="row justify-content-center">
